<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:padding="10dp"
            android:layout_margin="2dp"
            >

            <TextView
                android:id="@+id/explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_margin="18dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_label"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:layout_margin="5dp"/>

                <!-- Beef -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/beef_label" />

                    <EditText
                        android:id="@+id/value1Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Pork -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pork_label" />

                    <EditText
                        android:id="@+id/value2Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Chicken -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chicken_label" />

                    <EditText
                        android:id="@+id/value3Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Fish -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fish_label" />

                    <EditText
                        android:id="@+id/value4Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Butter -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/butter_label" />

                    <EditText
                        android:id="@+id/value5Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Other Dairy Products -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other_dairy_products_label" />

                    <EditText
                        android:id="@+id/value6Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:padding="10dp">

                <TextView
                    android:id="@+id/transportaions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transportation_label"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:layout_margin="5dp"/>
                <!-- Car -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/car_label" />

                    <EditText
                        android:id="@+id/value7Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Public Transport -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/public_transport_label" />

                    <EditText
                        android:id="@+id/value8Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

                <!-- Plane -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/plane_label" />

                    <EditText
                        android:id="@+id/value9Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:background="@drawable/rounded_background"
                android:padding="10dp">

                <TextView
                    android:id="@+id/electrics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/electrical_appliances"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:layout_margin="5dp"/>

                <!-- Electrical Appliances -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/in_number_of_uses_washing_machine_label" />

                    <EditText
                        android:id="@+id/value10Field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/Bsenddata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#A39595"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/submit_data" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_background">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/TVusdatat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/your_average"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TVusdata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_average" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/linearLayout4"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/global_average"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TVavgdata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_average" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>